name:                tyle

--                   +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            TYped Language Evaluator

description:         A toy language.

homepage:            github.com/gambogi/tyle

license:             MIT

license-file:        LICENSE

author:              Matt Gambogi

maintainer:          m@gambogi.com

category:            Development

build-type:          Simple

cabal-version:       >=1.10

-- extra-source-files:  

library
    exposed-modules: Tyle.Parsers

    build-depends:       base >=4.8 && <4.9
                 ,       parsec
                 ,       text
                 ,       safe

    default-language:    Haskell2010

    documentation:       True

executable tyle
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules: Tyle.Parsers

  default-extensions: OverloadedStrings
                    , PartialTypeSignatures

  build-depends: base >=4.8 && <4.9
               , attoparsec
               , parsec
               , text
               , bytestring
               , safe

  default-language:    Haskell2010
  documentation:       True
