name:                tyle

--                   +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis: TYped Language Evaluator

description: A toy language.

homepage: github.com/gambogi/tyle

license: MIT

license-file: LICENSE

author: Matt Gambogi

maintainer: m@gambogi.com

category: Development

build-type: Simple

cabal-version: >=1.18

library
    exposed-modules: Tyle.Parsers
                   , Tyle.Grammar
                   , Tyle.Eval

    build-depends: base >=4.8 && <4.9
                 , parsec
                 , text
                 , safe

    default-language:    Haskell2010

    documentation:       True

test-suite tests
    hs-source-dirs: test

    main-is: Tests.hs

    build-depends: base >=4.8 && <4.9
                 , parsec
                 , text
                 , safe
                 , HUnit
                 , QuickCheck
                 , tyle

    ghc-options: -Wall

    default-extenstions: OverloadedStrings

    default-language:    Haskell2010

    type: exitcode-stdio-1.0

executable tyle
    main-is: Main.hs

    default-extensions: OverloadedStrings
                      , PartialTypeSignatures

    build-depends: base >=4.8 && <4.9
                 , attoparsec
                 , parsec
                 , text
                 , bytestring
                 , safe

    default-language: Haskell2010

    documentation: True
